--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "MiraiByPassKemNasa",
+    "name": "MiraiByPassLeHuuHuyCuteS1",
     "version": "1.2.14",
-    "description": "Kem Premium Nasa Platinum",
+    "description": "Lê Hữu Huy",
     "main": "mirai.js",
     "scripts": {
         "start": "node index",
@@ -10,9 +10,9 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/kemnasa/miraiv2.git"
+        "url": "git+https://github.com/lehuuhuycutes1/miraiv2.git"
     },
-    "author": "KemNasa",
+    "author": "LeHuuHuy",
     "license": "GPL-3.0",
     "dependencies": {
         "simple-youtube-api": "",
